# sentinel

./: .env.example  LICENSE  MVP_STATUS.md  QUICKSTART.md  README.md  SETUP.md  pyproject.toml  verify_setup.py
data/microsoftvscode/on-deck/: bundle.json
docs/: ARCHITECTURE.md  CORE_ABSTRACTIONS.md  INTEGRATION.md  PLUG_AND_PLAY_WALKTHROUGH.md
examples/github_prd_agent/: README.md
runs/: latest
runs/20251228_145720/reports/: report.md
runs/20251228_145720/trace/: events.jsonl
sentinel/: __init__.py  cli.py  config.py  util.py
sentinel/agent/: __init__.py  loop.py  prd_writer.py
sentinel/boundaries/: __init__.py  detect.py
sentinel/core/: __init__.py  adapter.py  adapters.py  hook.py  interfaces.py
sentinel/evidence/: __init__.py  bind.py  claims.py  graph.py
sentinel/github/: __init__.py  cache.py  client.py  fetch.py
sentinel/interventions/: __init__.py  policy.py  types.py
sentinel/packets/: __init__.py  decision_packet.py
sentinel/report/: __init__.py  render_md.py
sentinel/trace/: __init__.py  replay.py  schema.py  store_jsonl.py
tests/: __init__.py  test_smoke.py
tests/fixtures/: mock_llm_responses.json  sample_bundle.json
